Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- some XHTML validity issues in layout_tabular_view and
  widget_tabular_render
New internal features
~~~~~~~~~~~~~~~~~~~~~
- classes attributes in widget_tabular_render to control
  the look of buttons and batching gadget