@@ -44,7 +44,9 @@ A simpler render method that puts each "row" in a div element.
          tal:attributes="class css_class">
       <div tal:repeat="row rows"
            tal:attributes="class python:test(repeat['row'].odd(),
-                           'odd', 'even')">
+                                          'odd', 'even');
+                        onMouseOver options/row_mouseover|nothing;
+                        onMouseOut options/row_mouseout|nothing;">
         <tal:block replace="structure row" />
       </div>
     </div>
